Destiny Colectivos - Text changes

--- a/destiny4.0/colectivos/ilimitada_avanzada_300/index.html
+++ b/destiny4.0/colectivos/ilimitada_avanzada_300/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=154084d35f4ac7b2ed51f47e75726a5a" rel="stylesheet">
-<link href="css/styles.css?v=21cdcbf732daa4bd73cd12557fcee674" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=f4a14c15251eb0d40c0e7411a6f9d2ca" rel="stylesheet">
+<link href="css/styles.css?v=5be63c6a6e2bb376534a9b1f78b068c4" rel="stylesheet" data-ws10-microcss="">
 <script>
 
 utag_data.plans_add2cart = [
@@ -95,13 +95,9 @@ utag_data.plans_add2cart = [
                 <section class="ws10-c-card ws10-c-card-rate ws10-c-card--no-shadow" data-ws10-js="card-rate">
                     <div class="ws10-c-card-rate__w-rates">
                         <div class="ws10-c-card-rate__a-rate">
-                            <ul class="ws10-c-card-rate__product-info"
-                                data-vfes-seo-empathy-promoperiod=""
-                                data-vfes-seo-empathy-promoprice=""
-                                data-vfes-seo-empathy-price="">
-                                <li class="ws10-c-card-rate__product-info-item" >
-                                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <ul class="ws10-c-card-rate__product-info" data-vfes-seo-empathy-promoperiod="" data-vfes-seo-empathy-promoprice="" data-vfes-seo-empathy-price="">
+                                <li class="ws10-c-card-rate__product-info-item">
+                                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <use xlink:href="#icon-mobile"></use>
                                     </svg>
                                     <div class="ws10-c-card-rate__product">
@@ -110,31 +106,27 @@ utag_data.plans_add2cart = [
                                         </p>
                                         <p class="ws10-c-card-rate__product-txt  ws10-c-card-rate__product-txt--primary ">
                                             Velocidad alta
-                                            <svg class="ws10-c-card-rate__product-txt-icon"
-                                                xmlns="http://www.w3.org/2000/svg"
-                                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <svg class="ws10-c-card-rate__product-txt-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                                 <use xlink:href="#icon-thunder-2grey"></use>
                                             </svg>
                                         </p>
                                     </div>
                                 </li>
-                                <li class="ws10-c-card-rate__product-info-item"  data-js-vf="_secondLine" >
-                                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <li class="ws10-c-card-rate__product-info-item" data-js-vf="_secondLine">
+                                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <use xlink:href="#icon-sim"></use>
                                     </svg>
                                     <div class="ws10-c-card-rate__product">
                                         <p class="ws10-c-card-rate__product-title">
-                                            Segunda línea GRATIS 1 año
+                                            Datos y minutos ilimitados GRATIS
                                         </p>
                                         <p class="ws10-c-card-rate__product-txt ">
-                                            Datos y minutos ilimitados
+                                            Segunda línea GRATIS 1 año
                                         </p>
                                     </div>
                                 </li>
-                                <li class="ws10-c-card-rate__product-info-item" >
-                                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <li class="ws10-c-card-rate__product-info-item">
+                                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <use xlink:href="#icon-broadband-or-wifi"></use>
                                     </svg>
                                     <div class="ws10-c-card-rate__product">
@@ -146,9 +138,8 @@ utag_data.plans_add2cart = [
                                         </p>
                                     </div>
                                 </li>
-                                <li class="ws10-c-card-rate__product-info-item" >
-                                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <li class="ws10-c-card-rate__product-info-item">
+                                    <svg class="ws10-c-card-rate__product-icon ws10-u-color--black" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <use xlink:href="#icon-tv"></use>
                                     </svg>
                                     <div class="ws10-c-card-rate__product">
@@ -169,22 +160,13 @@ utag_data.plans_add2cart = [
                                     </legend>
                                     <div class="ws10-c-card-rate__w-form-select">
                                         <div class="vf-form__box ws10-c-form__box">
-                                            <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-1" class="ws10-c-form__radio"
-                                              data-analytics-element="cardrate"
-                                              data-analytics-context="portabilidad"
-                                              data-analytics-category="cta"
-                                              checked/>
+                                            <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-1" class="ws10-c-form__radio" data-analytics-element="cardrate" data-analytics-context="portabilidad" data-analytics-category="cta" checked="">
                                             <label for="rate-1-card-rate-option-1" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine" data-js-vf-value="portability">
                                                 Portabilidad
                                             </label>
                                         </div>
                                         <div class="vf-form__box s10-c-form__box">
-                                            <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-2"
-                                              class="ws10-c-form__radio"
-                                              data-analytics-element="cardrate"
-                                              data-analytics-context="alta nueva"
-                                              data-analytics-category="cta"
-                                            />
+                                            <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-2" class="ws10-c-form__radio" data-analytics-element="cardrate" data-analytics-context="alta nueva" data-analytics-category="cta">
                                             <label for="rate-1-card-rate-option-2" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine" data-js-vf-value="newNumber">
                                                 Nuevo Número
                                             </label>
@@ -210,15 +192,7 @@ utag_data.plans_add2cart = [
                                                     </p>
                                                 </div>
                                             </div>
-                                            <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id&#x3D;1285850&amp;tcli&#x3D;0&amp;tta&#x3D;1"
-                                                data-cta="300:port:card"
-                                                target="_self" name="Lo quiero" title="Lo quiero"
-                                                class="ws10-c-button ws10-c-button--auto vf-button--mobile"
-                                                onmousedown="addtocart(utag_data.plans_add2cart[0])"
-                                                data-analytics-context="lo quiero"
-                                                data-analytics-element="cardrate"
-                                                data-analytics-category="cta"
-                                                data-analytics-id="-4725602956266">
+                                            <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285850&amp;tcli=0&amp;tta=1" data-cta="300:port:card" target="_self" name="Lo quiero" title="Lo quiero" class="ws10-c-button ws10-c-button--auto vf-button--mobile" onmousedown="addtocart(utag_data.plans_add2cart[0])" data-analytics-context="lo quiero" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-4725602956266">
                                                 Lo quiero
                                                 <span class="ws10-u--hidden-visually"></span>
                                             </a>
@@ -242,15 +216,7 @@ utag_data.plans_add2cart = [
                                                     </p>
                                                 </div>
                                             </div>
-                                            <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id&#x3D;1285867&amp;tcli&#x3D;0&amp;tta&#x3D;1"
-                                                data-cta="300:port:card"
-                                                target="_self" name="Lo quiero" title="Lo quiero"
-                                                class="ws10-c-button ws10-c-button--auto vf-button--mobile"
-                                                onmousedown="addtocart(utag_data.plans_add2cart[1])"
-                                                data-analytics-context="lo quiero"
-                                                data-analytics-element="cardrate"
-                                                data-analytics-category="cta"
-                                                data-analytics-id="-4725875100583">
+                                            <a href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=1285867&amp;tcli=0&amp;tta=1" data-cta="300:port:card" target="_self" name="Lo quiero" title="Lo quiero" class="ws10-c-button ws10-c-button--auto vf-button--mobile" onmousedown="addtocart(utag_data.plans_add2cart[1])" data-analytics-context="lo quiero" data-analytics-element="cardrate" data-analytics-category="cta" data-analytics-id="-4725875100583">
                                                 Lo quiero
                                                 <span class="ws10-u--hidden-visually"></span>
                                             </a>
@@ -932,52 +898,8 @@ utag_data.plans_add2cart = [
                                             }
                                         }">
             <ul class="ws10-c-carousel__list js-carousel-list" id="idUl" aria-labelledby="idList">
-                 <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                    <div class="ws10-c-card ws10-c-card--no-shadow">
-                        <div class="ws10-c-card-addons">
-                        <div class="ws10-c-card-addons__box">
-                            <img class="ws10-u--pr1x" src="img/section-addons/secureNet.svg?v=862eb0f074fd96894f93cef121d76b9a" alt="SecureNet">
-                            <h3 class="ws10-c-card-addons__title"><strong>Secure Net</strong></h3>
-                        </div>
-                        <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Para que <strong>navegues sin riesgos en Internet por la red móvil y de acceso fijo de Vodafone</strong>, protegiéndote de virus (malware) y páginas fraudulentas (phishing).</p>
-                        <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 1€/mes.</p>
-                        </div>
-                    </div>
-                    </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                    <div class="ws10-c-card ws10-c-card--no-shadow">
-                        <div class="ws10-c-card-addons">
-                        <div class="ws10-c-card-addons__box">
-                            <img class="ws10-u--pr1x" src="img/section-addons/numberOne.svg?v=07086a0ab64e116ed337deb5cc10b402" alt="Tidal">
-                            <h3 class="ws10-c-card-addons__title"><strong>OneNumber</strong></h3>
-                        </div>
-                        <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Mismo número de teléfono y misma tarifa de voz y datos en todos tus dispositivos</strong> sin necesidad de tener el móvil cerca y sin cambiar la SIM.</p>
-                        <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono secundario y 1€/mes para Smart speaker con Alexa.</p>
-                        </div>
-                    </div>
-                    </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                    <div class="ws10-c-card ws10-c-card--no-shadow">
-                        <div class="ws10-c-card-addons">
-                        <div class="ws10-c-card-addons__box">
-                            <img class="ws10-u--pr1x" src="img/section-addons/securenet-family.svg?v=48adeb63fc6ff54242b372b68c0bf9ec" alt="SecureNet Family">
-                            <h3 class="ws10-c-card-addons__title"><strong>Secure Net Family</strong></h3>
-                        </div>
-                        <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Secure Net Family</strong> te protege de <strong>virus (malware) y páginas fraudulentas (phishing)</strong>, permitiendo además aplicar políticas de control parental en todos slos dispositivos de tu hogar.</p>
-                        <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 5€/mes (IVA incluido).</p>
-                        </div>
-                    </div>
-                    </li>         <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                    <div class="ws10-c-card ws10-c-card--no-shadow">
-                        <div class="ws10-c-card-addons">
-                        <div class="ws10-c-card-addons__box">
-                            <img class="ws10-u--pr1x" src="img/section-addons/tidal.svg?v=4abc131faca749581d3cbd2f2965d13b" alt="Tidal">
-                            <h3 class="ws10-c-card-addons__title"><strong>TIDAL</strong></h3>
-                        </div>
-                        <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Plataforma de música en streaming para que disfrutes de tu música con la mejor calidad de audio.</p>
-                        <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong> durante 3 meses, después 7,99€/mes.</p>
-                        </div>
-                    </div>
-                    </li>    </ul>
-            <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;">(*)Todos los servicios podrás gestionarlos en la App Mi Vodafone</span>
+            </ul>
+            <span class="ws10-c-carousel__helperText" id="idList" style="left: 0;"></span>
           </div>
         </section>
         <!-- SIN SORPRESAS -->
@@ -1186,19 +1108,9 @@ utag_data.plans_add2cart = [
               <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
             </span>
           </div>
-          <a
-            data-cta="300:port:card"
-            type="submit"
-            class="ws10-c-button ws10-c-button--auto"
-            href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=&tcli=0&tta=2"
-            onmousedown="addtocart(utag_data.plans_add2cart[0])"
-            data-analytics-element="stiky inferior"
-            data-analytics-context=""
-            data-analytics-category=""
-            data-analytics-id=""
-          >
+          <a data-cta="300:port:card" type="submit" class="ws10-c-button ws10-c-button--auto" href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=&amp;tcli=0&amp;tta=2" onmousedown="addtocart(utag_data.plans_add2cart[0])" data-analytics-element="stiky inferior" data-analytics-context="" data-analytics-category="" data-analytics-id="">
             
-            <span class="ws10-u--hidden-visually" data-cta-a11y></span>
+            <span class="ws10-u--hidden-visually" data-cta-a11y=""></span>
           </a>
         </div>
         <div class="ws10-c-card-rate-sticky__w-cta ws10-u--hidden" data-js-vf="_newNumber">
@@ -1209,19 +1121,9 @@ utag_data.plans_add2cart = [
               <span class="ws10-c-card-rate-sticky__final-price-date">/mes</span>
             </span>
           </div>
-          <a
-            data-cta="300:port:card"
-            type="submit"
-            class="ws10-c-button ws10-c-button--auto"
-            href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=&tcli=0&tta=2"
-            onmousedown="addtocart(utag_data.plans_add2cart[1])"
-            data-analytics-element="stiky inferior"
-            data-analytics-context=""
-            data-analytics-category=""
-            data-analytics-id=""
-          >
+          <a data-cta="300:port:card" type="submit" class="ws10-c-button ws10-c-button--auto" href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id=&amp;tcli=0&amp;tta=2" onmousedown="addtocart(utag_data.plans_add2cart[1])" data-analytics-element="stiky inferior" data-analytics-context="" data-analytics-category="" data-analytics-id="">
             
-            <span class="ws10-u--hidden-visually" data-cta-a11y></span>
+            <span class="ws10-u--hidden-visually" data-cta-a11y=""></span>
           </a>
         </div>
       </div>
@@ -1343,4 +1245,4 @@ utag_data.plans_add2cart = [
 </div>
 
 <script src="js/ws10.js?v=521cabc8fcef977203a83b9138d86531"></script>
-<script src="js/main.js?v=c28d1b448ac5fcacebc343b6b69f60c2"></script>
+<script src="js/main.js?v=38112f52c2f926f6e76d103ccd6c4e46"></script>
