--- a/destiny4.0/colectivos/ilimitada_plus_600/index.html
+++ b/destiny4.0/colectivos/ilimitada_plus_600/index.html
@@ -21,8 +21,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
         <div class="ws10-o-layout">
           <div class="vf-banner__textcontainer ws10-o-layout__item ws10-u--2/3@desktop ws10-u--3/5@tablet">
             <span class="ws10-u-heading--4">Fibra + Móvil <strong>50% dto. 3 meses + después 15% dto. 2 años</strong></span>
-            <h2 class="ws10-u--pt5x ws10-u--3/4@desktop"><strong>Todo lo que necesitas</strong> para estar <strong>conectado fuera y dentro</strong> de tu casa</h2>
-    
+            <h2 class="ws10-u-heading--2-lt ws10-u--pt5x ws10-u--3/4@desktop"><strong>Todo lo que necesitas</strong> para estar <strong>conectado fuera y dentro</strong> de tu casa</h2>
             <a
               class="ws10-c-link-chevron ws10-c-link-chevron--primary"
               target="_blank"
@@ -48,7 +47,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
           </div>
           <!-- Ticket -->
           <h2 class="ws10-u-heading--5 ws10-u-heading--5-lt ws10-u--mb0 vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet">
-              Vodafone One ilimitada Plus 600Mbps
+              Vodafone One ilimitada Plus x2 600Mbps
           </h2>
           <div class="vf-ticket ws10-o-layout__item ws10-u--1/3@desktop ws10-u--2/5@tablet" style="top: 40px;" data-js-vf="_ticket">
               <div class="vf-ticket__floating">
@@ -85,10 +84,15 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                                       </svg>
                                       <div class="ws10-c-card-rate__product">
                                           <p class="ws10-c-card-rate__product-title">
-                                              Segunda línea GRATIS 1 año
-                                          </p>
-                                          <p class="ws10-c-card-rate__product-txt ">
                                               Datos y minutos ilimitados
+                                          </p>
+                                          <p class="ws10-c-card-rate__product-txt  ws10-c-card-rate__product-txt--primary ">
+                                              Segunda línea: Velocidad máxima 5G
+                                              <svg class="ws10-c-card-rate__product-txt-icon"
+                                                  xmlns="http://www.w3.org/2000/svg"
+                                                  xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                  <use xlink:href="#icon-thunder-3"></use>
+                                              </svg>
                                           </p>
                                       </div>
                                   </li>
@@ -113,10 +117,10 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                                       </svg>
                                       <div class="ws10-c-card-rate__product">
                                           <p class="ws10-c-card-rate__product-title">
-                                              Pack TV Seriefans GRATIS 1 año
+                                              Pack TV Plus x2 Series
                                           </p>
                                           <p class="ws10-c-card-rate__product-txt ">
-                                              con HBO España y 60 canales más
+                                              con HBO España, Amazon Prime y 50 canales más + deco incl.
                                           </p>
                                       </div>
                                   </li>
@@ -163,10 +167,10 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                                                           Permanencia 1 año
                                                       </p>
                                                       <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price">
-                                                          <del>63,74€/mes</del>
+                                                          <del>89,99€/mes</del>
                                                       </p>
                                                       <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                          37,49€/<sub>mes</sub>
+                                                          44,99€/<sub>mes</sub>
                                                       </p>
                                                   </div>
                                               </div>
@@ -195,10 +199,10 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                                                           Permanencia 1 año
                                                       </p>
                                                       <p class="ws10-c-card-rate__dto ws10-c-card-rate__dto--price">
-                                                          <del>63,74€/mes</del>
+                                                          <del>89,99€/mes</del>
                                                       </p>
                                                       <p class="ws10-c-card-rate__price ws10-u-color--black">
-                                                          37,49€/<sub>mes</sub>
+                                                          44,99€/<sub>mes</sub>
                                                       </p>
                                                   </div>
                                               </div>
@@ -705,7 +709,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                 </section>                <!-- TAMBIÉN INCLUIDO -->
                 <section class="vf-mobile ws10-u--pt12x">
                     <h3 class="ws10-u-heading--3">
-                        <strong>También incluido en Vodafone One ilimitada Plus 300Mbps</strong>
+                        <strong>También incluido en Vodafone One ilimitada Plus 600Mbps</strong>
                     </h3>
                   <!-- CAROUSEL -->
                   <div
@@ -741,96 +745,12 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                       id="idUl"
                       aria-labelledby="idList"
                     >
-                      <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                        <div class="ws10-c-card ws10-c-card--no-shadow">
-                          <div class="ws10-c-card-addons">
-                            <div class="ws10-c-card-addons__box">
-                              <img
-                                class="ws10-u--pr1x"
-                                src="img/section-addons/secureNet.svg"
-                                alt="SecureNet"
-                              />
-                              <h3 class="ws10-c-card-addons__title"><strong>Secure Net</strong></h3>
-                            </div>
-                            <p class="ws10-c-card-addons__paragraph ws10-u--pb6x">Para que
-                              <strong>navegues sin riesgos en Internet por la red móvil y de
-                                acceso fijo de Vodafone</strong>, protegiéndote de virus
-                              (malware) y páginas fraudulentas (phishing).</p>
-                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                              durante 3 meses, después 1€/mes.</p>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                        <div class="ws10-c-card ws10-c-card--no-shadow">
-                          <div class="ws10-c-card-addons">
-                            <div class="ws10-c-card-addons__box">
-                              <img
-                                class="ws10-u--pr1x"
-                                src="img/section-addons/numberOne.svg"
-                                alt="Tidal"
-                              />
-                              <h3 class="ws10-c-card-addons__title"><strong
-                                >OneNumber</strong></h3>
-                            </div>
-                            <p class="ws10-c-card-addons__paragraph ws10-u--pb5x">Mismo número
-                              de teléfono y misma tarifa de voz y datos en todos tus
-                              dispositivos sin necesidad de tener el móvil cerca y sin cambiar
-                              la SIM.</p>
-                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                              durante 1 mes, después 5€/mes para smartwatch, Tablet o teléfono
-                              secundario y 1€/mes para Smart speaker con Alexa.</p>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                        <div class="ws10-c-card ws10-c-card--no-shadow">
-                          <div class="ws10-c-card-addons">
-                            <div class="ws10-c-card-addons__box">
-                              <img
-                                class="ws10-u--pr1x"
-                                src="img/section-addons/securenet-family.svg"
-                                alt="SecureNet"
-                              />
-                              <h3 class="ws10-c-card-addons__title"><strong>Secure Net Family</strong>
-                              </h3>
-                            </div>
-                            <p class="ws10-c-card-addons__paragraph ws10-u--pb6x"><strong>Secure
-                                Net Family</strong>
-                              te protege de
-                              <strong>virus (malware) y páginas fraudulentas (phishing)</strong>,
-                              permitiendo además aplicar políticas de control parental en todos
-                              los dispositivos de tu hogar.</p>
-                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                              durante 3 meses, después 5€/mes (IVA incluido).</p>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="ws10-c-carousel__list-element js-carousel-list-element">
-                        <div class="ws10-c-card ws10-c-card--no-shadow">
-                          <div class="ws10-c-card-addons">
-                            <div class="ws10-c-card-addons__box">
-                              <img
-                                class="ws10-u--pr1x"
-                                src="img/section-addons/tidal.svg"
-                                alt="Tidal"
-                              />
-                              <h3 class="ws10-c-card-addons__title"><strong>TIDAL</strong></h3>
-                            </div>
-                            <p class="ws10-c-card-addons__paragraph ws10-u--pb8x">Plataforma de
-                              música en streaming para que disfrutes de tu música con la mejor
-                              calidad de audio.</p>
-                            <p class="ws10-c-card-addons__paragraph"><strong>GRATIS</strong>
-                              durante 3 meses, después 7,99€/mes.</p>
-                          </div>
-                        </div>
-                      </li>
                     </ul>
                     <span
                       class="ws10-c-carousel__helperText"
                       id="idList"
                       style="left: 0;"
-                    >(*)Todos los servicios podrás gestionarlos en la App Mi Vodafone</span>
+                    ></span>
                   </div>
                 </section>
                 <!-- SIN SORPRESAS -->
