arreglo de cta para que coja classes

--- a/destiny4.0/one/ilimitada-avanzada-600/index.html
+++ b/destiny4.0/one/ilimitada-avanzada-600/index.html
@@ -148,7 +148,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 6
                                                 target="_self"
                                                 name="Lo quiero"
                                                 title="Lo quiero"
-                                                class=""
+                                                class="ws10-c-button ws10-c-button--auto"
                                                 onmousedown="addtocart(utag_data.plans_add2cart[0])"
                                                 data-analytics-context="lo quiero"
                                                 data-analytics-element="cardrate"
@@ -185,7 +185,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 6
                                                 target="_self"
                                                 name="Lo quiero"
                                                 title="Lo quiero"
-                                                class=""
+                                                class="ws10-c-button ws10-c-button--auto"
                                                 onmousedown="addtocart(utag_data.plans_add2cart[1])"
                                                 data-analytics-context="lo quiero"
                                                 data-analytics-element="cardrate"
