--- a/destiny4.0/Norte/plp/index.html
+++ b/destiny4.0/Norte/plp/index.html
@@ -12,7 +12,7 @@
               class="ws10-c-badge-text ws10-c-badge-text--turquoise ws10-u--mt2x ws10-u--mr1x vfms-badge3"
             >Oferta para Navarra, Euskadi, Asturias y Galicia</b>
             <p class="ws10-u-heading--1-lt ws10-flex ws10-flex__direction--column vfms-title-banner ws10-u--mt2x">
-                <span><strong>Ahora 2 líneas ilimitadas</strong>, fibra óptica y TV al 50% dto. 6 meses</strong></span>
+                <span><strong>Ahora 2 líneas ilimitadas</strong>, fibra óptica y TV al <strong>50% dto. 6 meses</strong></span>
             </p>
           </div>
           <div class="ws10-o-layout__item ws10-u--1/2@desktop">
@@ -279,6 +279,11 @@
                                                 </p>
                                                 <p class="ws10-c-card-rate__product-txt  ws10-c-card-rate__product-txt--primary ">
                                                     Segunda línea: Velocidad máxima 5G
+                                                    <svg class="ws10-c-card-rate__product-txt-icon"
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                        <use xlink:href="#icon-thunder-3"></use>
+                                                    </svg>
                                                 </p>
                                             </div>
                                         </li>
