--- a/destiny4.0/one/plp/index.html
+++ b/destiny4.0/one/plp/index.html
@@ -1,5 +1,5 @@
-<link href="css/ws10.css?v=3288604b778b844d66b0a1c6f8b6f4c3" rel="stylesheet">
-<link href="css/styles.css?v=ee9b6e878b468b4fd4d4cc4fa997dfa4" rel="stylesheet" data-ws10-microcss="">
+<link href="css/ws10.css?v=ba5c1c048b1e03c213a893ff4db6c448" rel="stylesheet">
+<link href="css/styles.css?v=ba4a6b9d9d5f999a355e40b95ff800f4" rel="stylesheet" data-ws10-microcss="">
 <div class="vfes-ms-content ws10-u-color--bg-light-grey" id="plp" style="visibility: hidden;opacity: 0">
     <!-- Section BANNER -->
     <!-- banner -->
@@ -16,9 +16,9 @@
           <div class="ws10-o-layout__item ws10-u--1/2@desktop">
             <picture>
               <source media="(min-width:768px)" srcset="img/bodegon-desktop.webp?v=2883818d173f184e1e0a7ed5b499c97c" type="image/webp">
-              <source media="(min-width:768px)" srcset="img/bodegon-desktop.png?v=a5b2c0072596bfb1e2fe7a3e53e98a8e" type="image/png">
+              <source media="(min-width:768px)" srcset="img/bodegon-desktop.png?v=2332d7b658e7c1ae4e67610a9500c25b" type="image/png">
               <source srcset="img/bodegon-mobile.webp?v=98cce96a2578d3b19cc81971bbdc7d24" type="image/webp">
-              <img src="img/bodegon-desktop.png?v=a5b2c0072596bfb1e2fe7a3e53e98a8e">
+              <img src="img/bodegon-desktop.png?v=2332d7b658e7c1ae4e67610a9500c25b">
             </picture>
           </div>
         </div>
@@ -193,7 +193,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/paquete-one-4/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="600mbps" data-analytics-element="cardrate:one ilimitada avanzada 600 mbps" data-analytics-category="cta" data-analytics-id="-3827639703071">
+                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/paquete-one-4/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="300mbps" data-analytics-element="cardrate:one ilimitada plus" data-analytics-category="cta" data-analytics-id="-3827639703071">
                                             Más info
                                         </a>
                                     </div>
@@ -282,7 +282,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/paquete-one-5/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="600mbps" data-analytics-element="cardrate:one ilimitada plus" data-analytics-category="cta" data-analytics-id="-8477551683805">
+                                        <a href="https://www.vodafone.es/c/particulares/es/productos-y-servicios/vodafone-one/paquete-one-5/" target="_self" name="Más info" title="Más info" class="ws10-c-button ws10-c-button--auto vf-button--mobile" data-analytics-context="600mbps" data-analytics-element="cardrate:one ilimitada plus x2" data-analytics-category="cta" data-analytics-id="-8477551683805">
                                             Más info
                                         </a>
                                     </div>
@@ -301,7 +301,7 @@
                 <picture class="ws10-c-card-discovery-standard-full-width-title__picture vfms-height-mobile">
                   <source media="(min-width:1024px)" srcset="img/section-addons/cabecera-desktop.webp?v=230be6d015c58417c098fe3de500188a">
                   <source media="(min-width:768px)" srcset="img/section-addons/cabecera-tablet.webp?v=df62cbd57019a1c6c19ea91ed89a695f">
-                  <img src="img/section-addons/cabecera-mobile.webp?v=e40dd2a95fe70576e61dbf8d1da34585" alt="texto imagen" class="ws10-c-card-discovery-standard-full-width-title__image ws10-c-lazy-load ws10-c-lazy-load--skeleton-light" data-ws10-js="lazy-load" loading="lazy">
+                  <img src="img/section-addons/cabecera-mobile.webp?v=3f456703123b71edec6480c26c4e058e" alt="texto imagen" class="ws10-c-card-discovery-standard-full-width-title__image ws10-c-lazy-load ws10-c-lazy-load--skeleton-light" data-ws10-js="lazy-load" loading="lazy">
                 </picture>
                 <div class="ws10-o-layout__item ws10-u--1/1 ws10-u--1/2@tablet ws10-u--1/2@desktop ws10-u-color--dark-grey ws10-u--pl12x">
                   <b class="ws10-c-badge-text ws10-c-badge-text--turquoise ws10-u--mt4x">¡Nuevo!</b>
@@ -350,7 +350,7 @@
                 </p>
               </div>
               <div class="ws10-flex ws10-flex__align-items--center ws10-flex__justify--center ws10-c-cards-discovery-standard__image-holder">
-                <img src="img/section-addons/icono-sim.svg?v=2840d844331d544e9625315dcfccfcf9" alt="icono sim">
+                <img src="img/section-addons/icono-sim.svg?v=917ba71aff58a4318c5e7074494f636f" alt="icono sim">
               </div>
             </div>
           </div>
@@ -376,7 +376,7 @@
                 </p>
               </div>
               <div class="ws10-flex ws10-flex__align-items--center ws10-flex__justify--center ws10-c-cards-discovery-standard__image-holder">
-                <img src="img/section-addons/icono-yu.svg?v=c0bbf207671e7d05b998d2b9f046643d" alt="icono yu">
+                <img src="img/section-addons/icono-yu.svg?v=529deac560d961a077feb1dc6c379fd2" alt="icono yu">
               </div>
             </div>
           </div>
@@ -427,9 +427,9 @@
         <section class="vf-banner50 ws10-o-layout ws10-flex__align-items--center ws10-flex__justify--between">
             <div class="vf-banner50__container1 ws10-o-layout__item ws10-u--1/2@desktop ws10-align--right">
                 <picture>
-                    <source class="vf-banner50__img" srcset="img/section-vodafone-one/mama-hija.webp?v=fd95df13f6888d7e9060c3b2e67cb077" type="image/webp">
-                    <source class="vf-banner50__img" srcset="img/section-vodafone-one/mama-hija.jpg?v=7bf8238729c0f9a11756066f9ae1c136" type="image/jpg">
-                    <img class="vf-banner50__img" src="img/section-vodafone-one/mama-hija.jpg?v=7bf8238729c0f9a11756066f9ae1c136" alt="Madre y niña interactúan con una Tablet">
+                    <source class="vf-banner50__img" srcset="img/section-vodafone-one/mama-hija.webp?v=138b00c2b56e45edbc4c271decd945dd" type="image/webp">
+                    <source class="vf-banner50__img" srcset="img/section-vodafone-one/mama-hija.jpg?v=ab657b022c1cbeb7f3ed1ebf44e9a881" type="image/jpg">
+                    <img class="vf-banner50__img" src="img/section-vodafone-one/mama-hija.jpg?v=ab657b022c1cbeb7f3ed1ebf44e9a881" alt="Madre y niña interactúan con una Tablet">
                 </picture>
             </div>
             <div class="vf-banner50__container2 ws10-o-layout__item ws10-u--1/2@desktop">
@@ -446,4 +446,4 @@
     </div>
 </div>
 <script src="js/ws10.js?v=87a5cdccb0beeab7883be40ee6f35ec1"></script>
-<script src="js/main.js?v=14fcf32d11e8c326372d6c065e38a0e6"></script>
+<script src="js/main.js?v=461243d5e6f21d20f8f2e454f631761d"></script>
