Destiny - Fix radiobuttons error

--- a/destiny4.0/one/ilimitada-plus-600/index.html
+++ b/destiny4.0/one/ilimitada-plus-600/index.html
@@ -102,12 +102,32 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                               <form action="" method="get" class="vf-form ws10-c-card-rate__form ws10-c-form" data-js-vf="_showOrHideSticky">
                                   <fieldset>
                                       <legend class="ws10-c-card-rate__form-title">
-                                          
+                                          ¿Cómo quieres la línea móvil principal?
                                       </legend>
                                       <div class="ws10-c-card-rate__w-form-select">
+                                          <div class="vf-form__box ws10-c-form__box">
+                                              <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-1" class="ws10-c-form__radio"
+                                                  data-analytics-element="cardrate"
+                                                  data-analytics-context="portabilidad"
+                                                  data-analytics-category="cta"
+                                                  checked/>
+                                              <label for="rate-1-card-rate-option-1" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine"
+                                                  data-js-vf-value="portability">
+                                                  Portabilidad
+                                              </label>
+                                          </div>
+                                          <div class="vf-form__box ws10-c-form__box">
+                                              <input type="radio" name="rate-1-card-rate" id="rate-1-card-rate-option-2" class="ws10-c-form__radio"
+                                                  data-analytics-element="cardrate"
+                                                  data-analytics-context="alta nueva"
+                                                  data-analytics-category="cta" />
+                                              <label for="rate-1-card-rate-option-2" class="ws10-c-card-rate__form-label ws10-c-form__label" data-js-vf="_buttonTypeLine"
+                                                  data-js-vf-value="newNumber">
+                                                  Nuevo Número
+                                              </label>
+                                          </div>
                                       </div>
                                   </fieldset>
-          
                                       <div class="ws10-c-card-rate__w-cta ws10-u--hidden" data-js-vf="_newNumber">
                                           <div class="ws10-c-card-rate__w-offers">
                                               <div class="ws10-c-card-rate__offer" id="rate-1-offer-1">
