--- a/destiny4.0/one/ilimitada-avanzada-300/index.html
+++ b/destiny4.0/one/ilimitada-avanzada-300/index.html
@@ -97,7 +97,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada avanzada 3
                               <form action="" method="get" class="vf-form ws10-c-card-rate__form ws10-c-form" data-js-vf="_showOrHideSticky">
                                   <fieldset>
                                       <legend class="ws10-c-card-rate__form-title">
-                                          ¿Cómo quieres la línea móvil principal?!!
+                                          ¿Cómo quieres la línea móvil principal?
                                       </legend>
                                       <div class="ws10-c-card-rate__w-form-select">
                                           <div class="vf-form__box ws10-c-form__box">
