--- a/destiny4.0/one/ilimitada-plus-600/index.html
+++ b/destiny4.0/one/ilimitada-plus-600/index.html
@@ -951,7 +951,7 @@ utag_data.plans_add2cart = [{ "product_name": "vodafone one ilimitada plus 600mb
                 </div>
                 <!--Deco -->
                 <section class="vf-deco ws10-u--pt12x">
-                    <h3 >¿Cómo es la experiencia de TV sin decodificador?</h3>
+                    <h3 >¿Cómo es la experiencia de TV con decodificador HD y 4K?</h3>
                     <picture>
                         <source class="ws10-u--1/1" srcset="img/section-deco/contenido-tv.webp" type="image/webp" />
                         <source class="ws10-u--1/1" srcset="img/section-deco/contenido-tv.png" type="image/png" />
